# DZ_13_1

./: main.py  pyproject.toml
src/: funcs.py  products.json  utils.py
tests/: test_utils.py
