[tool.poetry]
name = "dz-13-1"
version = "0.1.0"
description = ""
authors = ["Dmitry Krasheninnikov <ice_eyes@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
